Template Home/Company

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -62,5 +62,9 @@
   "AccessTokenCompany": {
     "dataSource": "mysqlDs",
     "public": false
+  },
+  "post": {
+    "dataSource": "mysqlDs",
+    "public": true
   }
 }
