--- a/server/model-config.json
+++ b/server/model-config.json
@@ -66,5 +66,9 @@
   "post": {
     "dataSource": "mysqlDs",
     "public": true
+  },
+  "container": {
+    "dataSource": "storage",
+    "public": true
   }
 }
