--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^4.0.0",
+    "loopback-component-storage": "^3.3.1",
     "loopback-connector-mysql": "^5.1.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.3.0"
