--- a/server/model-config.json
+++ b/server/model-config.json
@@ -70,5 +70,9 @@
   "container": {
     "dataSource": "storage",
     "public": true
+  },
+  "MultiAccessToken": {
+    "dataSource": "mysqlDs",
+    "public": true
   }
 }
