apply CV - miss delete post .

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -86,5 +86,9 @@
   "follow": {
     "dataSource": "mysqlDs",
     "public": true
+  },
+  "cv": {
+    "dataSource": "mysqlDs",
+    "public": true
   }
 }
