--- a/bower.json
+++ b/bower.json
@@ -54,6 +54,7 @@
     "morris.js": "^0.5.1",
     "ng.datepicker-ui": "*",
     "ng-tags-input": "^3.2.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "angular-bootstrap": "^2.5.0"
   }
 }
